Left justify text, fix project grid alignment bug, improve responsiveness

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ header, nav, section {
   background-color: #B8C1C8;
 }
 
+.navBar ol {
+  padding: 0px;
+}
+
 .navBar li {
   float: left;
   margin: 5px 10px;
@@ -29,8 +33,7 @@ header, nav, section {
 
 @media (max-width: 350px) {
   .navBar ol {
-    padding: 0px;
-    margin: 0px;
+    margin-top: 0px;
     font-size: 85%;
   }
 }
@@ -50,7 +53,7 @@ header, nav, section {
   width: 150px;
 }
 
-h1, h2, h3, p {
+h1, h2, h3 {
   text-align: center;
 }
 
@@ -61,13 +64,13 @@ h1, h2, h3, p {
 }
 
 @media (max-width: 1215px) {
-  .subSect {
+  #portfolioContainer {
     max-width: 640px;
   }
 }
 
 @media (max-width: 815px) {
-  .subSect {
+  #portfolioContainer {
     max-width: 320px;
   }
 }
@@ -82,8 +85,10 @@ h1, h2, h3, p {
   max-width: 300px;
   margin: 10px;
   border: 1px solid #B8C1C8;
-  border-radius: 10px;
-  overflow-y: auto;
+}
+
+.projectHeader {
+  height: 206px;
 }
 
 .projectHeader:hover {
